--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
         </div>
     </header>
     <main>
-        <section class="hero section">
+        <section class="hero">
             <div class="container">
                 <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button class="hero-btn" type="button">Заказать услугу</button>
             </div>
         </section>
-        <section class="hang section">
+        <section class="hang">
             <div class="container">
                 <h2 class="hang-title">Особенности</h2>
                 <ul class="hang-list list">
@@ -82,9 +82,9 @@
                 </ul>
             </div>
         </section>
-        <section class="gallery section">
+        <section class="gallery">
             <div class="container">
-                <h2 class="gallery-title">Чем мы занимаемся</h2>
+                <h2 class="gallery-title title">Чем мы занимаемся</h2>
                 <ul class="gallery-list list">
                     <li>
                         <img src="./img/box1-min.jpg" alt="Печатает с помощью клавиатуры на планшете" height="294"
@@ -102,37 +102,45 @@
                 </ul>
             </div>
         </section>
-        <section class="specialists section">
+        <section class="specialists">
             <div class="container">
-                <h2 class="specialists-title">Наша команда</h2>
+                <h2 class="specialists-title title">Наша команда</h2>
                 <ul class="specialists-list list">
                     <li class="specialists-item">
                         <img src="./img/img.1-min.jpg" alt="Первый специалист" height="260" width="270">
-                        <h3 class="specialists-pre-title">Игорь Демьяненко</h3>
-                        <p lang="en" class="specialists-position">Product Designer</p>
+                        <div class="specialists-class">
+                            <h3 class="specialists-pre-title">Игорь Демьяненко</h3>
+                            <p lang="en" class="specialists-position">Product Designer</p>
+                        </div>
                     </li>
                     <li class="specialists-item">
                         <img src="./img/img.2-min.jpg" alt="Второй специалист" height="260" width="270">
-                        <h3 class="specialists-pre-title">Ольга Репина</h3>
-                        <p lang="en" class="specialists-position">Frontend Developer</p>
+                        <div class="specialists-class">
+                            <h3 class="specialists-pre-title">Ольга Репина</h3>
+                            <p lang="en" class="specialists-position">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="specialists-item">
                         <img src="./img/img.3-min.jpg" alt="Третий специалист" height="260" width="270">
-                        <h3 class="specialists-pre-title">Николай Тарасов</h3>
-                        <p lang="en" class="specialists-position">Marketing</p>
+                        <div class="specialists-class">
+                            <h3 class="specialists-pre-title">Николай Тарасов</h3>
+                            <p lang="en" class="specialists-position">Marketing</p>
+                        </div>
                     </li>
                     <li class="specialists-item">
                         <img src="./img/img.4-min.jpg" alt="Четвертый специалист" height="260" width="270">
-                        <h3 class="specialists-pre-title">Михаил Ермаков</h3>
-                        <p lang="en" class="specialists-position">UI Designer</p>
+                        <div class="specialists-class">
+                            <h3 class="specialists-pre-title">Михаил Ермаков</h3>
+                            <p lang="en" class="specialists-position">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
-    <footer class="footer section">
+    <footer class="footer">
         <div class="container">
-            <h2 class="footer-logo" lang="en"><span class="logo-color">Web</span>Studio</h2>
+            <a class="footer-logo" href="./index.html" lang="en"><span class="logo-color">Web</span>Studio</a>
             <address>
                 <ul class="address-list list">
                     <li class="footer-address-item"><a
