--- a/portfolio.html
+++ b/portfolio.html
@@ -68,65 +68,82 @@
                 <ul class="works-list list">
                     <li class="work-item">
                         <img src="./img/notebook.jpg" alt="открыт вебсайт на ноутбуке" width="370">
-                        <h2 class="work-titles"> Технокряк </h2>
-                        <p class="work-titles-about"> Веб-сайт</p>
+                        <div class="work-class">
+                            <h2 class="work-titles"> Технокряк </h2>
+                            <p class="work-titles-about"> Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="work-item">
                         <img src="./img/players.jpg" alt="два баскетболиста" width="370">
-                        <h2 class="work-titles">Постер New Orlean vs Golden Star</h2>
-                        <p class="work-titles-about">Дизайн</p>
+                        <div class="work-class">
+                            <h2 class="work-titles">Постер New Orlean vs Golden Star</h2>
+                            <p class="work-titles-about">Дизайн</p>
+                        </div>
                     </li>
                     <li class="work-item">
                         <img src="./img/seafood.jpg" alt="логотип приложения для ресторана" width="370">
-                        <h2 class="work-titles">Ресторан Seafood</h2>
-                        <p class="work-titles-about">Приложение</p>
+                        <div class="work-class">
+                            <h2 class="work-titles">Ресторан Seafood</h2>
+                            <p class="work-titles-about">Приложение</p>
+                        </div>
                     </li>
                     <li class="work-item">
                         <img src="./img/headphones.jpg" alt="наушники" width="370">
-                        <h2 class="work-titles">Проект Prime</h2>
-                        <p class="work-titles-about">Маркетинг</p>
+                        <div class="work-class">
+                            <h2 class="work-titles">Проект Prime</h2>
+                            <p class="work-titles-about">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="work-item">
                         <img src="./img/boxes.jpg" alt="две коробки" width="370">
-                        <h2 class="work-titles">Проект Boxes</h2>
-                        <p class="work-titles-about">Приложение</p>
+                        <div class="work-class">
+                            <h2 class="work-titles">Проект Boxes</h2>
+                            <p class="work-titles-about">Приложение</p>
+                        </div>
                     </li>
                     <li class="work-item">
                         <img src="./img/monitor.jpg" alt="Монитор" width="370">
-                        <h2 class="work-titles">Inspiration has no Borders</h2>
-                        <p class="work-titles-about">Веб-сайт</p>
+                        <div class="work-class">
+                            <h2 class="work-titles">Inspiration has no Borders</h2>
+                            <p class="work-titles-about">Веб-сайт</p>
+                        </div>
                     </li>
                     <li class="work-item">
                         <img src="./img/book.jpg" alt="Книжка с картинками и надписью 'ограниченое издание'"
                             width="370">
-                        <h2 class="work-titles">Издание Limited Edition</h2>
-                        <p class="work-titles-about">Дизайн</p>
+                        <div class="work-class">
+                            <h2 class="work-titles">Издание Limited Edition</h2>
+                            <p class="work-titles-about">Дизайн</p>
+                        </div>
                     </li>
                     <li class="work-item">
                         <img src="./img/lab.jpg" alt="Бумажка с надписью 'Label tag'" width="370">
-                        <h2 class="work-titles">Проект LAB</h2>
-                        <p class="work-titles-about">Маркетинг</p>
+                        <div class="work-class">
+                            <h2 class="work-titles">Проект LAB</h2>
+                            <p class="work-titles-about">Маркетинг</p>
+                        </div>
                     </li>
                     <li class="work-item">
                         <img src="./img/typing.on.laptop.jpg" alt="что-то печатают на ноутбуке" width="370">
-                        <h2 class="work-titles">Growing Business</h2>
-                        <p class="work-titles-about">Приложение</p>
+                        <div class="work-class">
+                            <h2 class="work-titles">Growing Business</h2>
+                            <p class="work-titles-about">Приложение</p>
+                        </div>
                     </li>
                 </ul>
             </div>
         </section>
     </main>
-    <footer class="footer section">
+    <footer class="footer">
         <div class="container">
-            <h2 class="footer-logo" lang="en"><span class="logo-color">Web</span>Studio</h2>
+            <a class="footer-logo" href="./index.html" lang="en"><span class="logo-color">Web</span>Studio</a>
             <address>
                 <ul class="address-list list">
                     <li class="footer-address-item"><a
                             href="https://www.google.com/search?q=%D0%B3.+%D0%9A%D0%B8%D0%B5%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8%2C+26&oq=%D0%B3.+%D0%9A%D0%B8%D0%B5%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8%2C+26&aqs=chrome.0.69i59j0i512j69i60l2.1067j0j7&sourceid=chrome&ie=UTF-8"
                             class="footer-address">г. Киев, пр-т Леси Украинки, 26</a></li>
                     <li class="footer-address-item"><a href="mailto:info@example.com"
-                            class="footer-link">info@example.com</a>
-                    </li>
+                            class="footer-link">info@example.com</a></li>
                     <li class="footer-address-item"><a href="tel:+380991111111" class="footer-link">+38 099 111 11
                             11</a></li>
                 </ul>
