--- a/portfolio.html
+++ b/portfolio.html
@@ -137,7 +137,7 @@
     <footer class="footer">
         <div class="container">
             <a class="footer-logo" href="./index.html" lang="en"><span class="logo-color">Web</span>Studio</a>
-            <address>
+            <address class="address">
                 <ul class="address-list list">
                     <li class="footer-address-item"><a
                             href="https://www.google.com/search?q=%D0%B3.+%D0%9A%D0%B8%D0%B5%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8%2C+26&oq=%D0%B3.+%D0%9A%D0%B8%D0%B5%D0%B2%2C+%D0%BF%D1%80-%D1%82+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8%2C+26&aqs=chrome.0.69i59j0i512j69i60l2.1067j0j7&sourceid=chrome&ie=UTF-8"
