work on mistakes
flex

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <button class="hero-btn" type="button">Заказать услугу</button>
             </div>
         </section>
-        <section class="hang">
+        <section class="hang section">
             <div class="container">
                 <h2 class="hang-title">Особенности</h2>
                 <ul class="hang-list list">
@@ -102,7 +102,7 @@
                 </ul>
             </div>
         </section>
-        <section class="specialists">
+        <section class="specialists section">
             <div class="container">
                 <h2 class="specialists-title title">Наша команда</h2>
                 <ul class="specialists-list list">
