--- a/portfolio.html
+++ b/portfolio.html
@@ -49,19 +49,19 @@
             <div class="container">
                 <h1 class="works-title">Наши работы</h1>
                 <ul class="works-list-btn list">
-                    <li>
+                    <li class="works-item-btn">
                         <button type="button" class="works-btn">Все</button>
                     </li>
-                    <li>
+                    <li class="works-item-btn">
                         <button type="button" class="works-btn">Веб-сайты</button>
                     </li>
-                    <li>
+                    <li class="works-item-btn">
                         <button type="button" class="works-btn">Приложения</button>
                     </li>
-                    <li>
+                    <li class="works-item-btn">
                         <button type="button" class="works-btn">Дизайн</button>
                     </li>
-                    <li>
+                    <li class="works-item-btn">
                         <button type="button" class="works-btn">Маркетинг</button>
                     </li>
                 </ul>
