--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </ul>
             </div>
         </section>
-        <section class="gallery">
+        <section class="gallery section">
             <div class="container">
                 <h2 class="gallery-title title">Чем мы занимаемся</h2>
                 <ul class="gallery-list list">
